# dungeondriver

./: .envtemplate  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  CONTRIBUTING.MD  README.MD  docker-compose.yml  pytest.ini  redis.conf  sandbox.ipynb
.github/workflows/: docker-publish.yml  pytest.yml  python-publish.yml
ai_driver/: .dockerignore  .envtemplate  Dockerfile  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements-server.in  requirements-server.txt  requirements-test.in  requirements-test.txt  requirements.in  requirements.txt
ai_driver/ai_driver/: config.py  faiss_manager.py  instruct.py  langsmith_config.py  local_loader.py  main.py  pinecone_manager.py  pipelines.py  qa.py
ai_driver/ai_driver/cloud_llm/: OAISettings.py  __init__.py  cloud_chat_agent.py  open_ai_api.py
ai_driver/ai_driver/core/: __init__.py  generation_config.py  local_model_config.py
ai_driver/ai_driver/flows/: swarm.py
ai_driver/ai_driver/image_generation/prompt_generation/: prompt_rating.py  prompts.py  sd_prompt_agent.py
ai_driver/ai_driver/local_llm/: ggml_config.py  ggml_llm.py  ggml_pipeline.py  prompts.py
ai_driver/ai_driver/retrieval/: qa.py  qa_config.py
ai_driver/ai_driver/scripts/: download_model.py  init_db.py  init_vectorstore.py
ai_driver/ai_driver/scripts/tests/: test_download_model.py
ai_driver/ai_driver/server/: redis.py  server.py
ai_driver/ai_driver/server/api/: deps.py
ai_driver/ai_driver/server/api/api_v1/: api.py
ai_driver/ai_driver/server/api/api_v1/endpoints/: auth.py  chat.py  image.py  retrieval_qa.py
ai_driver/ai_driver/server/core/: auth.py  config.py
ai_driver/ai_driver/server/core/tests/: auth_test.py
ai_driver/ai_driver/server/crud/: base.py  crud_user.py  sessions.py
ai_driver/ai_driver/server/crud/tests/: test_session_crud.py
ai_driver/ai_driver/server/db/: base.py  init_db.py  session.py
ai_driver/ai_driver/server/models/: user.py
ai_driver/ai_driver/server/schemas/: __init__.py  chat.py  image.py  qa.py  user.py
ai_driver/ai_driver/server/scripts/: backend_pre_start.py  initial_data.py  prestart.sh  run.sh
ai_driver/ai_driver/tests/: local_loader_test.py  qa_test.py  test_main.py
ai_driver/alembic/: env.py
ai_driver/alembic/versions/: b99d93299f68_initial_db_schema.py
ai_driver/config/: config.yaml  config.yml  config_example.yml
ai_driver/data/: README.md
ai_driver/requirements/: requirements-dev.in  requirements-dev.txt  requirements-server.in  requirements-server.txt  requirements-test.in  requirements-test.txt  requirements-ui.in  requirements.in  requirements.txt
ai_driver/scripts/: download-model.py  init_db.py
ai_driver/webui/: Dockerfile  auth.py  chat.py  qa.py  server.py
data/: README.md
dungeon_driver/: .dockerignore  .envtemplate  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt
dungeon_driver/dungeon_driver/: main.py  spell_surge_generator.py  spell_surge_tab.py
dungeon_driver/dungeon_driver/mechanics/tests/: spell_surge_test.py
dungeon_driver/dungeon_driver/prompts/: img_gen.py  prompt_builder.py
dungeon_driver/dungeon_driver/prompts/tests/: prompt_builder_test.py
dungeon_driver/dungeon_driver/tests/: dd_test.py
dungeon_driver/dungeon_driver/webui/: __init__.py  auth.py  chat_tab.py  dnd_qa_tab.py  login.py  spell_surge_tab.py
dungeon_driver/requirements/: requirements-dev.txt  requirements-test.txt  requirements.in  requirements.txt
scripts/: build_aidriver.sh  build_dungeondriver.sh  build_toolchain.sh  init_local_vectorstore.py  initial_server_deps.sh  initial_server_setup.sh  initial_server_setup_with_deps.sh  install_docker_compose.sh  nvidia_driver_setup.sh  refresh_requirements_pin.sh  smoke.py  update_requirements.sh
vectorstore/: .gitignore
