[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=68.0",
  "setuptools-scm",
  "pytest",
]

[project]
description = "AIDriver"
name = "aidriver"
version = "0.1.3"
dynamic = ["dependencies", "optional-dependencies"]


[tool.setuptools.dynamic]
dependencies = { file = ["requirements/requirements.in"] }
optional-dependencies.test = { file = ["requirements/requirements-test.in"] }
optional-dependencies.server = { file = ["requirements/requirements-server.in"] }
optional-dependencies.ui = { file = ["requirements/requirements-ui.in"] }
optional-dependencies.dev = { file = ["requirements/requirements-dev.in"]}

[tool.pytest.ini_options]
pythonpath = [
  "ai_driver",
]

[tool.setuptools.packages.find]
include = ["ai_driver", "ai_driver.*", "config"]  # package names should match these glob patterns (["*"] by default)
exclude = []  # exclude packages matching these glob patterns (empty by default)
