[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=68.0",
  "setuptools-scm",
  "pytest",
]

[project]
description = "Dungeon Driver : A companion for your dungeon diving applications"
name = "dungeondriver"
version = "0.1"
dependencies = [
  "requests",
  "python-dotenv",
  "pandas~=2.0.0",
  "pyarrow==12.0.0",
  "debugpy",
  "loguru",
  "httpx",
  "python-dotenv",
  "anyio",
  "jsonlines",
]

[tool.pytest.ini_options]
pythonpath = [
  "dungeon_driver",
]

[tool.setuptools.packages.find]
include = ["dungeon_driver"]  # package names should match these glob patterns (["*"] by default)
exclude = ["data"]  # exclude packages matching these glob patterns (empty by default)

[project.optional-dependencies]
test = [
    "pytest",
    "trio",
    "pytest-httpx",
]
dev = [
    "ipykernel",
    "mypy >= 1.0.1",
    "black",
    "pre-commit",
]
