[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=68.0",
  "setuptools-scm",
  "pytest",
]

[project]
description = "Dungeon Driver : A companion for your dungeon diving applications"
name = "dungeondriver"
version = "0.1"
dynamic = ["dependencies", "optional-dependencies"]


[tool.setuptools.dynamic]
dependencies = { file = ["requirements.in"] }
optional-dependencies.test = { file = ["requirements-test.in"] }
optional-dependencies.dev = { file = ["requirements-dev.in"]}


[tool.pytest.ini_options]
pythonpath = [
  "dungeon_driver",
]

[tool.setuptools.packages.find]
include = ["dungeon_driver"]  # package names should match these glob patterns (["*"] by default)
exclude = []  # exclude packages matching these glob patterns (empty by default)
